--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -8,4 +8,5 @@ stats:
     - "&7&m                                                       &r"
     - "&#FFDD00The total world size is %world_size%"
     - "&#FFDD00%total_players% players joined the server so far."
+    - "&#FFDD00%total_region_value% chunks have been loaded so far."
     - "&7&m                                                       &r"
